# toy-web-browser

./: .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  codecov.yml  mypy.ini  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  test.yml
examples/: 01_basic_structure.html  02_text_formatting.html  03_headings.html  04_lists.html  05_tables.html  06_complex_nesting.html  07_forms_and_inputs.html  font_test.html  list_test.html  table_test.html  test1.html  test2.html  test3.html
fonts/: README.md
scripts/: clean.sh  examples.sh  format.sh  lint.sh  render.sh  test.sh
src/: __init__.py  browser.py  config.py  exceptions.py  font_manager.py  html_parser.py  layout_engine.py  layout_utils.py  renderer.py
src/elements/: __init__.py  base.py  block.py  button.py  element_factory.py  heading.py  inline.py  input.py  list.py  pre.py  select.py  special.py  table.py  text.py
src/elements/input/: __init__.py  base_input.py  button_input.py  control_input.py  fallback_input.py  input_element.py  text_input.py
src/elements/table/: __init__.py  table_calculator.py  table_cell_element.py  table_element.py  table_row_element.py
src/layout/: __init__.py  font_operations.py  layout_engine.py  layout_mixin.py  layout_utils.py  text_operations.py
src/parser/: __init__.py  html_parser.py
src/renderer/: __init__.py  renderer.py
tests/: __init__.py  conftest.py  test_browser.py  test_html_parser.py  test_layout_engine.py
tests/fixtures/: __init__.py  test_utils.py
tests/integration/: test_rendering_pipeline.py
tests/unit/: test_browser_cli.py  test_config.py  test_font_manager.py  test_layout_utils.py  test_layout_utils_simple.py  test_renderer.py  test_renderer_simple.py
tests/unit/elements/: test_base_element.py  test_block_element.py  test_button_element.py  test_element_factory.py  test_heading_element.py  test_inline_element.py  test_input_element.py  test_list_elements.py  test_pre_element.py  test_select.py  test_special_elements.py  test_text_element.py
tests/unit/elements/table/: test_table_calculator.py  test_table_cell_element.py  test_table_element.py  test_table_row_element.py
